adding more elasticity paper updates

--- a/docs/elasticity_notes/dgpenalty.bib
+++ b/docs/elasticity_notes/dgpenalty.bib
@@ -1,3 +1,13 @@
+@article{cohen2001higher,
+  title={Higher order triangular finite elements with mass lumping for the wave equation},
+  author={Cohen, Gary and Joly, Patrick and Roberts, Jean E and Tordjman, Nathalie},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={38},
+  number={6},
+  pages={2047--2078},
+  year={2001},
+  publisher={SIAM}
+}
 @article{hagstrom2004new,
   title={A new auxiliary variable formulation of high-order local radiation boundary conditions: corner compatibility conditions and extensions to first-order systems},
   author={Hagstrom, Thomas and Warburton, Timothy},
@@ -250,8 +260,20 @@
   publisher={Oxford University Press}
 }
 
+@article{sjogreen2012fourth,
+  title={A fourth order accurate finite difference scheme for the elastic wave equation in second order formulation},
+  author={Sj{\"o}green, Bj{\"o}rn and Petersson, N Anders},
+  journal={Journal of Scientific Computing},
+  volume={52},
+  number={1},
+  pages={17--48},
+  year={2012},
+  publisher={Springer}
+}
+
 @article{appelo2015energy,
   title={{An energy-based discontinuous Galerkin discretization of the elastic wave equation in second order form}},
+  author={Appelo, Daniel and Hagstrom, Thomas},
   year={2015},
   note={Submitted to CMAME}
 }
@@ -936,6 +958,15 @@ publisher={Elsevier}
   publisher={Elsevier}
 }
 
+@article{williams2014symmetric,
+  title={Symmetric quadrature rules for simplexes based on sphere close packed lattice arrangements},
+  author={Williams, DM and Shunn, Lee and Jameson, Antony},
+  journal={Journal of Computational and Applied Mathematics},
+  volume={266},
+  pages={18--38},
+  year={2014},
+  publisher={Elsevier}
+}
 @article{williams2009roofline,
   title={Roofline: an insightful visual performance model for multicore architectures},
   author={Williams, Samuel and Waterman, Andrew and Patterson, David},
@@ -1100,7 +1131,7 @@ publisher={Elsevier}
   publisher={Springer}
 }
 @article{modave2015nodal,
-  title={A nodal discontinuous Galerkin method for reverse-time migration on GPU clusters},
+  title={{A nodal discontinuous Galerkin method for reverse-time migration on GPU clusters}},
   author={Modave, A and St-Cyr, A and Mulder, WA and Warburton, T},
   journal={Geophysical Journal International},
   volume={203},
@@ -1674,8 +1705,12 @@ keywords = "Isogeometric",
 keywords = "Blended methods "
 }
 
-@article{engvall2015isogeometric,
-  title={Isogeometric Triangular {Bernstein-B}{\'e}zier Discretizations: Automatic Mesh Generation and Geometrically Exact Finite Element Analysis},
+@article{engvall2016isogeometric,
+  title={{Isogeometric triangular Bernstein--B{\'e}zier discretizations: Automatic mesh generation and geometrically exact finite element analysis}},
   author={Engvall, Luke and Evans, John A},
-  year={2015}
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={304},
+  pages={378--407},
+  year={2016},
+  publisher={Elsevier}
 }
