--- a/docs/elasticity_notes/dgpenalty.bib
+++ b/docs/elasticity_notes/dgpenalty.bib
@@ -1,3 +1,37 @@
+@article{shepherd2008hexahedral,
+  title={Hexahedral mesh generation constraints},
+  author={Shepherd, Jason F and Johnson, Chris R},
+  journal={Engineering with Computers},
+  volume={24},
+  number={3},
+  pages={195--213},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{rognes2009efficient,
+  title={Efficient assembly of H(div) and H(curl) conforming finite elements},
+  author={Rognes, Marie E and Kirby, Robert C and Logg, Anders},
+  journal={SIAM Journal on Scientific Computing},
+  volume={31},
+  number={6},
+  pages={4130--4151},
+  year={2009},
+  publisher={Society for Industrial and Applied Mathematics}
+}
+
+
+@article{abdulle2002fourth,
+  title={{Fourth order Chebyshev methods with recurrence relation}},
+  author={Abdulle, Assyr},
+  journal={SIAM Journal on Scientific Computing},
+  volume={23},
+  number={6},
+  pages={2041--2054},
+  year={2002},
+  publisher={SIAM}
+}
+
 @article{cohen2001higher,
   title={Higher order triangular finite elements with mass lumping for the wave equation},
   author={Cohen, Gary and Joly, Patrick and Roberts, Jean E and Tordjman, Nathalie},
@@ -278,6 +312,27 @@
   note={Submitted to CMAME}
 }
 
+@article{carcione1988wave,
+  title={Wave-propagation simulation in an elastic anisotropic (transversely isotropic) solid},
+  author={Carcione, Juse M and Kosloff, Dan and Kosloff, Ronnie},
+  journal={The Quarterly Journal of Mechanics and Applied Mathematics},
+  volume={41},
+  number={3},
+  pages={319--346},
+  year={1988},
+  publisher={Oxford Univ Press}
+}
+@article{komatitsch2000simulation,
+  title={Simulation of anisotropic wave propagation based upon a spectral element method},
+  author={Komatitsch, Dimitri and Barnes, Christophe and Tromp, Jeroen},
+  journal={Geophysics},
+  volume={65},
+  number={4},
+  pages={1251--1260},
+  year={2000},
+  publisher={Society of Exploration Geophysicists}
+}
+
 @article{komatitsch2010high,
   title={{High-order finite-element seismic wave propagation modeling with MPI on a large GPU cluster}},
   author={Komatitsch, Dimitri and Erlebacher, Gordon and G{\"o}ddeke, Dominik and Mich{\'e}a, David},
@@ -543,6 +598,13 @@ publisher={Elsevier}
 }
 
 
+@MastersThesis{bencomo2015discontinuous,
+  title={{Discontinuous Galerkin and Finite Difference Methods for the Acoustic Equations with Smooth Coefficients}},
+  author={Bencomo, Mario Javier},
+  school={Rice University},
+  year={2015}
+}
+
 @phdthesis{wang2009discontinuous,
   title={{Discontinuous Galerkin} time domain methods for acoustics and comparison with finite difference time domain methods},
   author={Wang, Xin},
@@ -633,7 +695,7 @@ publisher={Elsevier}
 }
 
 @article{houston2002discontinuous,
-  title={Discontinuous hp-finite element methods for advection-diffusion-reaction problems},
+  title={Discontinuous $hp$-finite element methods for advection-diffusion-reaction problems},
   author={Houston, Paul and Schwab, Christoph and S{\"u}li, Endre},
   journal={SIAM Journal on Numerical Analysis},
   volume={39},
@@ -1014,11 +1076,6 @@ publisher={Elsevier}
   year={1924},
   publisher={JSTOR}
 }
-@article{appelo2015energy,
-  title={{An energy-based discontinuous Galerkin discretization of the elastic wave equation in second order form}},
-  year={2015},
-  note={Submitted to CMAME}
-}
 
 @article{wheeler1978elliptic,
   title={An elliptic collocation-finite element method with interior penalties},
@@ -1279,6 +1336,7 @@ pages={663-676}
   year={2015},
   publisher={SIAM}
 }
+
 
 @techreport{carpenter1994fourth,
   title={Fourth-order $2N$-storage {R}unge-{K}utta schemes},
