--- a/docs/dg_penalty/dgpenalty.bib
+++ b/docs/dg_penalty/dgpenalty.bib
@@ -1,3 +1,28 @@
+@book{riviere2008discontinuous,
+  title={{Discontinuous Galerkin methods for solving elliptic and parabolic equations: theory and implementation}},
+  author={Riviere, Beatrice},
+  year={2008},
+  publisher={Society for Industrial and Applied Mathematics}
+}
+
+@article{fezoui2005convergence,
+  title={{Convergence and stability of a discontinuous Galerkin time-domain method for the 3D heterogeneous Maxwell equations on unstructured meshes}},
+  author={Fezoui, Loula and Lanteri, St{\'e}phane and Lohrengel, St{\'e}phanie and Piperno, Serge},
+  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
+  volume={39},
+  number={6},
+  pages={1149--1176},
+  year={2005},
+  publisher={EDP Sciences}
+}
+
+@book{cohen2016finite,
+  title={{Finite Elements and Discontinuous Galerkin Methods for Transient Wave Equations}},
+  author={Cohen, Gary and Pernet, S{\'e}bastien},
+  year={2016},
+  publisher={Springer}
+}
+
 @book{horn2012matrix,
   title={Matrix analysis},
   author={Horn, Roger A and Johnson, Charles R},
@@ -48,7 +73,7 @@
 
 @misc{simpletracker,
 title={A simple multiple particle tracker with gap closing.},
-howpublished={\url{https://www.mathworks.com/matlabcentral/fileexchange/34040-simple-tracker}},
+howpublished={https://www.mathworks.com/matlabcentral/fileexchange/34040-simple-tracker},
 note={Accessed 10/1/2016}
 }
 
@@ -426,7 +451,16 @@ publisher={Elsevier}
   publisher={Oxford University Press}
 }
 
-
+@article{hesthaven2004high,
+  title={{High-order nodal discontinuous Galerkin methods for the Maxwell eigenvalue problem}},
+  author={Hesthaven, JS and Warburton, T},
+  journal={Philosophical Transactions of the Royal Society of London. Series A: Mathematical, Physical and Engineering Sciences},
+  volume={362},
+  number={1816},
+  pages={493--524},
+  year={2004},
+  publisher={The Royal Society}
+}
 @article{hesthaven2002nodal,
   title={Nodal high-order methods on unstructured grids: {I.} Time-domain solution of {Maxwell's} equations},
   author={Hesthaven, Jan S and Warburton, T.},
