updates to elas paper

--- a/docs/elasticity_notes/dgpenalty.bib
+++ b/docs/elasticity_notes/dgpenalty.bib
@@ -1,3 +1,14 @@
+@article{dolejvsi2002finite,
+  title={{A finite volume discontinuous Galerkin scheme} for nonlinear convection-diffusion problems}},
+  author={Dolej{\v{s}}{\'\i}, V and Feistauer, M and Schwab, C.},
+  journal={Calcolo},
+  volume={39},
+  number={1},
+  pages={1--40},
+  year={2002},
+  publisher={Springer}
+}
+
 @article{shepherd2008hexahedral,
   title={Hexahedral mesh generation constraints},
   author={Shepherd, Jason F and Johnson, Chris R},
