adding old elas files + some euler experiments

--- a/docs/elasticity_notes/dgpenalty.bib
+++ b/docs/elasticity_notes/dgpenalty.bib
@@ -1,3 +1,12 @@
+@book{dolejvsi2015discontinuous,
+  title={{Discontinuous Galerkin Method: Analysis and Applications to Compressible Flow}},
+  author={Dolej{\v{s}}{\'\i}, V{\'\i}t and Feistauer, Miloslav},
+  volume={48},
+  year={2015},
+  publisher={Springer}
+}
+
+
 @article{dolejvsi2002finite,
   title={{A finite volume discontinuous Galerkin scheme} for nonlinear convection-diffusion problems}},
   author={Dolej{\v{s}}{\'\i}, V and Feistauer, M and Schwab, C.},
